--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 * {
-  /* border: 1px solid lime; */
+  border: 1px solid lime;
   font-family: "Montserrat", sans-serif;
 }
 
 .examplecolor {
-  color: #25a15f;
+  color: #1e90d2;
+}
+
+.blackborder {
+  border: 1px solid black;
 }
