--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 * {
-  border: 1px solid lime;
+  /* border: 1px solid lime; */
   font-family: "Montserrat", sans-serif;
 }
 
